--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   [4] Some ES6 Features
   [5] Order Of Variables and Functions
   [6] Console is Your Friend
+  [7] remote change
 -->
 
 <!DOCTYPE html>
